[package]
name = "jose-jwa"
version = "0.2.0-pre"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
Pure Rust implementation of the JSON Web Algorithm (JWA) component of the
Javascript Object Signing and Encryption (JOSE) specification as described in
RFC7518
"""
documentation = "https://docs.rs/jose-jwa"
homepage = "https://github.com/RustCrypto/JOSE/tree/master/jose-jwa"
repository = "https://github.com/RustCrypto/JOSE"
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]
keywords = ["json", "jose"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
jose-b64 = { version = "=0.2.0-pre", default-features = false, features = ["secret"] }

serde = { version = "1.0.185", default-features = false, features = ["alloc", "derive"] }

[dev-dependencies]
serde_json = "1.0.96"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
