[package]
name = "jose-jwe"
version = "0.1.0-pre"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
Pure Rust implementation of the JSON Web Encryption (JWE) component of the
Javascript Object Signing and Encryption (JOSE) specification as described in
RFC7516
"""
documentation = "https://docs.rs/jose-jwe"
homepage = "https://github.com/RustCrypto/JOSE/tree/master/jose-jwe"
repository = "https://github.com/RustCrypto/JOSE"
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]
keywords = ["json", "jose"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
