[package]
name = "jose-jwk"
version = "0.2.0-pre"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
Pure Rust implementation of the JSON Web Key (JWK) component of the
Javascript Object Signing and Encryption (JOSE) specification as described in
RFC7517
"""
documentation = "https://docs.rs/jose-jwk"
homepage = "https://github.com/RustCrypto/JOSE/tree/master/jose-jwk"
repository = "https://github.com/RustCrypto/JOSE"
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]
keywords = ["json", "jose"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[features]
default = ["crypto"]
crypto = ["k256", "p256", "p384", "p521", "rsa"]
k256 = ["dep:elliptic-curve", "dep:k256"]
p256 = ["dep:elliptic-curve", "dep:p256"]
p384 = ["dep:elliptic-curve", "dep:p384"]
p521 = ["dep:elliptic-curve", "dep:p521"]
legacy = ["dep:base64ct", "dep:elliptic-curve", "dep:serde_json", "dep:serdect", "dep:subtle"]

[dependencies]
jose-b64 = { version = "=0.2.0-pre", default-features = false, features = ["secret"] }
jose-jwa = { version = "=0.2.0-pre" }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
zeroize = { version = "1.8.1", default-features = false, features = ["alloc"] }

# optional dependencies
elliptic-curve = { version = "0.14.0", optional = true, default-features = false, features = ["arithmetic", "sec1"] }
p256 = { version = "0.14.0-rc.14", default-features = false, optional = true, features = ["arithmetic"] }
p384 = { version = "0.14.0-rc.14", default-features = false, optional = true, features = ["arithmetic"] }
p521 = { version = "0.14.0-rc.14", default-features = false, optional = true, features = ["arithmetic"] }
k256 = { version = "0.14.0-rc.14", default-features = false, optional = true, features = ["arithmetic"] }
rsa = { version = "0.10.0-rc.6", default-features = false, optional = true }
url = { version = "2.4.1", default-features = false, optional = true, features = ["serde"] }

# legacy dependencies
base64ct = { version = "1", optional = true, default-features = false, features = ["alloc"] }
serdect = { version = "0.2", optional = true, default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.121", optional = true, default-features = false, features = ["alloc"] }
subtle = { version = "2.6", optional = true, default-features = false }

[dev-dependencies]
elliptic-curve = { version = "0.14.0", default-features = false, features = ["dev"] }
serde_json = "1.0.121"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
